article-republic.com (archived on 2009-10-31)
{
  "alexa_rank": 111054,
  "analysis_subcorpus": true,
  "categories": "",
  "char_count": 7144,
  "classifier_probability": 0.95,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.4,
  "homepage_snapshot_redirected_domain": "article-republic.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20091002045158id_/http://www.article-republic.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20091002045158id_/http%3A//article-republic.com",
  "interval": "2009_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "article-republic.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20091031192135id_/http%3A//www.article-republic.com/privacy.php",
  "policy_title": "Article Republic",
  "policy_url": "article-republic.com/privacy.php",
  "sha1": "966bbc4e68d850e258448145c47992d873cfc97c",
  "simhash": 38071128231988233,
  "simhash_updated": false,
  "site_hostname": "article-republic.com",
  "site_url": "http://article-republic.com",
  "smog": 15.02,
  "strict_updated": false,
  "timestamp": "20091031192135",
  "word_count": 1193,
  "year": 2009
}

--- a/a/ar/art/article-republic.com.html
+++ b/a/ar/art/article-republic.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the article-republic.com privacy policy that was archived on 2009-06-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090620182616id_/http%3A//www.article-republic.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the article-republic.com privacy policy that was archived on 2009-10-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091031192135id_/http%3A//www.article-republic.com/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Language" content="en-us">
@@ -201,14 +201,19 @@ google_ad_height = 600;
 </tr>
 
 </tbody></table>
-<div style="position:absolute;left:-69982px;top:-56983px"><ul> <li><strong><a href="http://www.norxtreat.com/item/azulfidine">buy Azulfidine online</a></strong></li> <li><strong><a href="http://www.norxtreat.com/item/actonel">order Actonel</a></strong></li> <li><strong><a href="http://www.norxtreat.com/item/duetact">buy Duetact online</a></strong></li> <li><strong><a href="http://www.norxtreat.com/item/mestinon">buy Mestinon online</a></strong></li> <li><strong><a href="http://www.norxtreat.com/item/actonel">purchase cheap Actonel</a></strong></li> <li><strong><a href="http://www.norxtreat.com/item/rumalaya">purchase cheap Rumalaya</a></strong></li> <li><strong><a href="http://www.norxtreat.com/item/coreg">order Coreg</a></strong></li> <li><strong><a href="http://www.norxtreat.com/item/pyridium">buy Pyridium online</a></strong></li> <li><strong><a href="http://www.norxtreat.com/item/danazol">buy Danazol online</a></strong></li> <li><strong><a href="http://www.norxtreat.com/item/nitrofurantoin">order Nitrofurantoin</a></strong></li> </ul></div>
+<div style="position:absolute;left:-69981px;top:-56933px">
+
+<ul>
+<li><a href="http://buyessay.org/accounting-essay.html">accounting essay</a></li><li><a href="http://buyessay.org/anthropology-essay.html">anthropology essay</a></li><li><a href="http://buyessay.org/application-letters-essay.html">application letters essay</a></li><li><a href="http://buyessay.org/architecture-essay.html">architecture essay</a></li><li><a href="http://buyessay.org/art-essay.html">art essay</a></li><li><a href="http://buyessay.org/astronomy-essay.html">astronomy essay</a></li><li><a href="http://buyessay.org/biology-essay.html">biology essay</a></li><li><a href="http://buyessay.org/business-essay.html">business essay</a></li><li><a href="http://buyessay.org/chemistry-essay.html">chemistry essay</a></li><li><a href="http://buyessay.org/classic-english-literature-essay.html">classic english literature essay</a></li><li><a href="http://buyessay.org/communications-essay.html">communications essay</a></li><li><a href="http://buyessay.org/computer-science-essay.html">computer science essay</a></li><li><a href="http://buyessay.org/consumer-science-essay.html">consumer science essay</a></li><li><a href="http://buyessay.org/criminal-law-essay.html">criminal law essay</a></li><li><a href="http://buyessay.org/economics-essay.html">economics essay</a></li><li><a href="http://buyessay.org/economy-essay.html">economy essay</a></li><li><a href="http://buyessay.org/education-essay.html">education essay</a></li><li><a href="http://buyessay.org/family-science-essay.html">family science essay</a></li><li><a href="http://buyessay.org/finance-essay.html">finance essay</a></li><li><a href="http://buyessay.org/geographical-essay.html">geographical essay</a></li><li><a href="http://buyessay.org/geology-essay.html">geology essay</a></li><li><a href="http://buyessay.org/high-tech-essay.html">high tech essay</a></li><li><a href="http://buyessay.org/history-essay.html">history essay</a></li><li><a href="http://buyessay.org/internet-essay.html">internet essay</a></li><li><a href="http://buyessay.org/law-essay.html">law essay</a></li><li><a href="http://buyessay.org/management-essay.html">management essay</a></li><li><a href="http://buyessay.org/marketing-essay.html">marketing essay</a></li><li><a href="http://buyessay.org/mathematics-essay.html">mathematics essay</a></li><li><a href="http://buyessay.org/MBA-essay.html">MBA essay</a></li><li><a href="http://buyessay.org/medical-essay.html">medical essay</a></li><li><a href="http://buyessay.org/medicine-essay.html">medicine essay</a></li><li><a href="http://buyessay.org/music-essay.html">music essay</a></li><li><a href="http://buyessay.org/nursing-essay.html">nursing essay</a></li><li><a href="http://buyessay.org/nursing-essay.html">nursing essay</a></li><li><a href="http://buyessay.org/philosophy-essay.html">philosophy essay</a></li><li><a href="http://buyessay.org/physics-essay.html">physics essay</a></li><li><a href="http://buyessay.org/politics-essay.html">politics essay</a></li><li><a href="http://buyessay.org/psychology-essay.html">psychology essay</a></li><li><a href="http://buyessay.org/sociology-essay.html">sociology essay</a></li><li><a href="http://buyessay.org/statistics-essay.html">statistics essay</a></li><li><a href="http://buyessay.org/technology-essay.html">technology essay</a></li><li><a href="http://buyessay.org/web-essay.html">web essay</a></li><li><a href="http://buyessay.org/zoology-essay.html">zoology essay</a></li>
+</ul>
+
 </div>
 
 
 
 
 
-
+</div>
 <p align="center"><font face="Verdana" size="1">Powered by <a href="http://www.articledashboard.com">Article Dashboard</a></font></p><font face="Verdana" size="1">
 
 
