yeahbaby.com (archived on 2009-10-31)
{
  "alexa_rank": 84120,
  "analysis_subcorpus": true,
  "categories": "business;shopping",
  "char_count": 8548,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.23,
  "homepage_snapshot_redirected_domain": "yeahbaby.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20091029014000id_/http://www.yeahbaby.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20091029014000id_/http%3A//yeahbaby.com",
  "interval": "2009_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "yeahbaby.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20091031202406id_/http%3A//www.yeahbaby.com/bottom-links.php%3Fpage%3D161",
  "policy_title": "Privacy Policy for YeahBaby.com",
  "policy_url": "yeahbaby.com/bottom-links.php?page=161",
  "sha1": "ee9683fb2283c1845c8c3e90482530967090e07d",
  "simhash": 8249887974544898324,
  "simhash_updated": true,
  "site_hostname": "yeahbaby.com",
  "site_url": "http://yeahbaby.com",
  "smog": 16.11,
  "strict_updated": true,
  "timestamp": "20091031202406",
  "word_count": 1398,
  "year": 2009
}

--- a/y/ye/yea/yeahbaby.com.html
+++ b/y/ye/yea/yeahbaby.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the yeahbaby.com privacy policy that was archived on 2009-06-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090627212803id_/http%3A//www.yeahbaby.com/bottom-links.php%3Fpage%3D161) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the yeahbaby.com privacy policy that was archived on 2009-10-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091031202406id_/http%3A//www.yeahbaby.com/bottom-links.php%3Fpage%3D161) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><head>
 <title>Privacy Policy for YeahBaby.com</title>
@@ -81,13 +81,16 @@ In developing our business, we might sell certain assets or the company, or part
 Use of Cookies </b><br> 
 Our site uses a technology called "cookies," which are small files that are placed on your computer by our servers stored by your browser to help keep track of your user profile. We use temporary cookies to remember your personal profile for your convenience, to deliver content specific to your needs and interests, and to ensure you don't see the same advertisement repeatedly. We also use cookies to track user trends and improve areas of our sites that our users find valuable. We do not share cookie information with anyone without your permission. 
 </p><p>
-YeahBaby.com may use third-party advertising companies to serve ads on our behalf. These companies may employ cookies and action tags (also known as single pixel gifs or web beacons) to measure advertising effectiveness. Any information that these third parties collect via cookies and action tags is completely anonymous. 
+<b>Third Party Advertising</b><br>
+YeahBaby.com use third-party advertising companies to serve ads when you visit our Web site. These companies may use aggregated information (not including your name, address, email address or telephone number) about your visits to this and other Web sites in order to provide advertisements about goods and services of interest to you. If you would like more information about this practice and to know your choices about not having this information used by these companies, <a href="http://www.networkadvertising.org/managing/opt_out.asp" target="_blank">click here</a>.
+</p>
+<p>Some third party advertisers may employ cookies and action tags (also known as single pixel gifs or web beacons) to measure advertising effectiveness. Any information that these third parties collect via cookies and action tags is completely anonymous. 
 </p><p>
-Some advertisers or third party ad servers may also use their own cookies. We do not have access to this information collected by third parties. 
+Some advertisers or third party ad servers may also use their own cookies. We do not have access to this information collected by third parties.</p><p>  
 </p><p>
 You have the ability to accept or decline cookies by modifying your browser and our web sites are viewable even if you disable the cookie function on your browser. However, if you disable cookies, some advanced and customized features of our site, as well as other web sites, will not be available to you. 
-</p><p><b>
-Third-Party Sites </b><br> 
+</p><p>
+<b>Third-Party Sites</b><br> 
 Our site contains links to other sites. Please note that we are not responsible for the privacy practices or the content of web sites that you can link to through our site. 
 </p><p><b>
 Changing your personal information </b><br> 
@@ -134,7 +137,7 @@ rnum=Math.round(Math.random() * 100000);
 ts=String.fromCharCode(60);
 if (window.self != window.top) {nf=''} else {nf='NF/'};
 document.write(ts+'script src="http://www.burstnet.com/cgi-bin/ads/ad17275a.cgi/v=2.3S/sz=120x600A|160x600A/'+rnum+'/'+nf+'RETURN-CODE/JS/">'+ts+'/script>');
-</script><script src="http://www.burstnet.com/cgi-bin/ads/ad17275a.cgi/v=2.3S/sz=120x600A|160x600A/42557/NF/RETURN-CODE/JS/"></script><noscript><a href="http://www.burstnet.com/ads/ad17275a-map.cgi/ns/v=2.3S/sz=120x600A|160x600A/" target="_top">
+</script><script src="http://www.burstnet.com/cgi-bin/ads/ad17275a.cgi/v=2.3S/sz=120x600A|160x600A/27964/NF/RETURN-CODE/JS/"></script><noscript><a href="http://www.burstnet.com/ads/ad17275a-map.cgi/ns/v=2.3S/sz=120x600A|160x600A/" target="_top">
 <img src="http://www.burstnet.com/cgi-bin/ads/ad17275a.cgi/ns/v=2.3S/sz=120x600A|160x600A/" border="0" alt="Click Here" /></a>
 </noscript>
 <!-- END ParentsConnect CODE -->
@@ -150,7 +153,7 @@ rnum=Math.round(Math.random() * 100000);
 ts=String.fromCharCode(60);
 if (window.self != window.top) {nf=''} else {nf='NF/'};
 document.write(ts+'script src="http://www.burstnet.com/cgi-bin/ads/ad14008a.cgi/v=2.3S/sz=300x250A/NZ/'+rnum+'/'+nf+'RETURN-CODE/JS/">'+ts+'/script>');
-</script><script src="http://www.burstnet.com/cgi-bin/ads/ad14008a.cgi/v=2.3S/sz=300x250A/NZ/29460/NF/RETURN-CODE/JS/"></script><noscript><a href="http://www.burstnet.com/ads/ad14008a-map.cgi/ns/v=2.3S/sz=300x250A/" target="_top">
+</script><script src="http://www.burstnet.com/cgi-bin/ads/ad14008a.cgi/v=2.3S/sz=300x250A/NZ/8903/NF/RETURN-CODE/JS/"></script><noscript><a href="http://www.burstnet.com/ads/ad14008a-map.cgi/ns/v=2.3S/sz=300x250A/" target="_top">
 <img src="http://www.burstnet.com/cgi-bin/ads/ad14008a.cgi/ns/v=2.3S/sz=300x250A/" border="0" alt="Click Here" /></a>
 </noscript>
 <!-- END Burst Network CODE -->
