--- a/s/se/ser/service-now.com.html
+++ b/s/se/ser/service-now.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the service-now.com privacy policy that was archived on 2009-06-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090622141748id_/http%3A//www.service-now.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the service-now.com privacy policy that was archived on 2009-11-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091101060121id_/http%3A//www.service-now.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html><head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -36,9 +36,8 @@
 				<li><a class="nav-who-we-are" href="http://www.service-now.com/who-we-are/">Who We Are</a></li>
 				<li><a class="nav-community" href="http://www.service-now.com/community/">Community</a></li>
 				<li><a class="nav-news" href="http://www.service-now.com/news-events/">News &amp; Events</a></li>
-				<li><a class="nav-were-hiring" href="http://www.service-now.com/were-hiring/">Careers</a></li>
+				<li><a class="nav-were-hiring" href="http://www.service-now.com/were-hiring/">We're Hiring</a></li>
 				<li><a class="nav-contact-us" href="http://www.service-now.com/contact-us/">Contact Us</a></li>
-				<li><a class="" href="http://www.service-now.com/knowledge09/">Knowledge User Group</a></li>
 			</ul>
 		</div>
 				<!--inner-page /privacy-policy/ 144-->			
@@ -125,15 +124,15 @@
 							<div class="grey-box-bottom">
 								<h2>RELATED LINKS</h2>
 								<ul>
-									<li><a href="http://www.service-now.com/news-events/press-releases/cHJlc3N1Z0ttU245MTAxTFBHMER6ZjVveA==">Service-now.com wins SDI 2009 Technology Supplier of the Year...</a></li>
-									<li><a href="http://www.service-now.com/news-events/press-releases/cHJlc3M4eTQwTm1aMTAwVUNabHE2SHl0NQ==">Service-now.com Spring 2009 Release Simplifies IT Self Service</a></li>
+									<li><a href="http://www.service-now.com//">Service-now.com Fall 2009 release includes new KM features</a></li>
+									<li><a href="http://www.service-now.com/news-events/press-releases/cHJlc3M4b25HcnpPMTA2MkVScUJ5a2w0Zg==">Service-now.com reports record FY 2009 customer and revenue growth</a></li>
+									<li><a href="http://www.service-now.com/news-events/press-releases/cHJlc3MyTlZZSklBMTA1SlBudUlSZ2xxVA==">Service-now.com achieves PinkVERIFY status for 11 ITIL processes</a></li>
 									<li><a href="http://searchdatacenter.techtarget.com/news/article/0,289142,sid80_gci1355189,00.html">ITIL vets turn to SaaS-based tools to ease upgrade hell</a></li>
-									<li><a href="http://www.service-now.com/news-events/press-releases/cHJlc3NSbE1OWHg3NjNiWGdSaXpXdDlJ">Service-now.com reports record growth</a></li>
 								</ul>
 							</div>
 						</div>
 					</div>						
-					<a class="btn-request-more-info" href="http://www.service-now.com/register/request-information/">REQUEST MORE INFO</a>	
+					<a class="btn-request-more-info" href="http://info.service-now.com/forms/request-information">REQUEST MORE INFO</a>	
 									</div>
 				
 											</div><div style="display:none;"></div>		
@@ -159,6 +158,6 @@ urchinTracker();
 <script type="text/javascript" language="javascript">i=11051</script>
 <script type="text/javascript" language="javascript" src="http://t3.trackalyzer.com/trackalyze.js"></script>
 <script type="text/javascript" language="JavaScript" src="/elqNow/elqCfg.js"></script>
-<script type="text/javascript" language="JavaScript" src="/elqNow/elqImg.js"></script><layer hidden="true"><img src="https://secure.eloqua.com/visitor/v200/svrGP.aspx?pps=3&amp;siteid=1133&amp;ref2=elqNone&amp;tzo=0&amp;ms=812" border="0" width="1" height="1"></layer>	
+<script type="text/javascript" language="JavaScript" src="/elqNow/elqImg.js"></script><layer hidden="true"><img src="https://secure.eloqua.com/visitor/v200/svrGP.aspx?pps=3&amp;siteid=1133&amp;ref2=elqNone&amp;tzo=0&amp;ms=599" border="0" width="1" height="1"></layer>	
 
 <div id="lbOverlay" style="visibility: hidden; zoom: 1; opacity: 0;"></div><div id="lbCenter" style="width: 250px; height: 250px; margin-left: -125px; display: none;"><div id="lbImage"><a id="lbPrevLink" href="#" style="display: none;"></a><a id="lbNextLink" href="#" style="display: none;"></a></div></div><div id="lbBottomContainer" style="display: none;"><div id="lbBottom"><a id="lbCloseLink" href="#"></a><div id="lbCaption"></div><div id="lbNumber"></div><div style="clear: both;"></div></div></div><div id="lbOverlay" style="visibility: hidden; zoom: 1; opacity: 0;"></div><div id="lbCenter" style="width: 250px; height: 250px; margin-left: -125px; display: none;"><div id="lbImage"><a id="lbPrevLink" href="#" style="display: none;"></a><a id="lbNextLink" href="#" style="display: none;"></a></div></div><div id="lbBottomContainer" style="display: none;"><div id="lbBottom"><div id="lbPreviewContainer"></div><a id="lbCloseLink" href="#"></a><div id="lbCaption"></div><div id="lbNumber"></div><div style="clear: both;"></div></div></div></body></html>
