--- a/r/ro/roc/rockwellcollins.com.html
+++ b/r/ro/roc/rockwellcollins.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the rockwellcollins.com privacy policy that was archived on 2009-06-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090618081533id_/http%3A//www.rockwellcollins.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the rockwellcollins.com privacy policy that was archived on 2009-11-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091101093644id_/http%3A//www.rockwellcollins.com/privacy) for the most accurate reproduction.-->
 
 <html><head>
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -191,16 +191,16 @@
                            <tbody><tr>
                               <td valign="top"><img width="5" src="/images/spacer.gif"></td>
                               <td valign="top"><br id="XSpLit"><p class="heading"><b></b></p>
-                                 <p xmlns:o="urn:www.microsoft.com/office" xmlns:st1="urn:www.microsoft.com/smarttags" xmlns:w="urn:www.microsoft.com/word"><strong>Last updated February 2008</strong></p>
+                                 <p xmlns:o="urn:www.microsoft.com/office" xmlns:st1="urn:www.microsoft.com/smarttags" xmlns:w="urn:www.microsoft.com/word"><strong>Last updated September 2009</strong></p>
                                  <p xmlns:o="urn:www.microsoft.com/office" xmlns:st1="urn:www.microsoft.com/smarttags" xmlns:w="urn:www.microsoft.com/word"><strong>Introduction</strong></p>
                                  <p xmlns:o="urn:www.microsoft.com/office" xmlns:st1="urn:www.microsoft.com/smarttags" xmlns:w="urn:www.microsoft.com/word">Rockwell Collins Inc. is committed to protecting your privacy. This statement details the steps we take to protect your personal
-                                    information when you visit our websites. It describes the personal information that we collect, the purposes for which we
+                                    information when you visit our Web sites. It describes the personal information that we collect, the purposes for which we
                                     use such information, and your choices regarding our use of it. The steps we take to protect your personal information and
-                                    how you can review and correct your personal information are also covered here. By accessing our websites, you are consenting
+                                    how you can review and correct your personal information are also covered here. By accessing our Web sites, you are consenting
                                     to the information collection and use practices described in this policy.
                                  </p>
                                  <p xmlns:o="urn:www.microsoft.com/office" xmlns:st1="urn:www.microsoft.com/smarttags" xmlns:w="urn:www.microsoft.com/word"><strong>Our collection of information</strong></p>
-                                 <p xmlns:o="urn:www.microsoft.com/office" xmlns:st1="urn:www.microsoft.com/smarttags" xmlns:w="urn:www.microsoft.com/word"><em>Information collected directly from you.</em> Generally, you can visit Rockwell Collins websites without entering any personal information. On certain pages, we may ask
+                                 <p xmlns:o="urn:www.microsoft.com/office" xmlns:st1="urn:www.microsoft.com/smarttags" xmlns:w="urn:www.microsoft.com/word"><em>Information collected directly from you.</em> Generally, you can visit Rockwell Collins Web sites without entering any personal information. On certain pages, we may ask
                                     you for personal information to provide a service or carry out a transaction that you have requested. The personal information
                                     we collect may include:
                                  </p>
@@ -214,11 +214,11 @@
                                     <li>Information such as your nationality and country of residence that allows us to determine your eligibility under export control
                                        regulations to receive information about certain technologies;
                                     </li>
-                                    <li>Information used to customize and facilitate your use of our websites, including login and technical information;</li>
+                                    <li>Information used to customize and facilitate your use of our Web sites, including login and technical information;</li>
                                     <li>Inquiries about and orders for our products and services;</li>
                                     <li>Information that assists us in identifying the products and services that best meet your requirements;</li>
                                     <li>Event registration information; and</li>
-                                    <li>Feedback from you about our websites and our products and services generally.</li>
+                                    <li>Feedback from you about our Web sites and our products and services generally.</li>
                                  </ul>
                                  <p xmlns:o="urn:www.microsoft.com/office" xmlns:st1="urn:www.microsoft.com/smarttags" xmlns:w="urn:www.microsoft.com/word">You are not required to provide any of this information, but if you do not, we may not be able to provide you the requested
                                     service or complete your transaction.
@@ -226,34 +226,34 @@
                                  <p xmlns:o="urn:www.microsoft.com/office" xmlns:st1="urn:www.microsoft.com/smarttags" xmlns:w="urn:www.microsoft.com/word"><em>Information collected automatically.</em> We collect information about your visit to our sites, including what pages you view, the date and time you access the site,
                                     the number of bytes transferred, links you click, the materials you access, and other actions taken within Rockwell Collins'
                                     sites. On sites that you enter with a user ID, we may connect this information with your identity to determine your potential
-                                    interests in our products and services. We also collect certain standard information that your browser sends to every website
-                                    you visit, such as your Internet Protocol (IP) address, your browser type and capabilities and language, your operating system,
-                                    and the website from which you linked to our site. We do not link this information to your identity.
+                                    interests in our products and services. We also collect certain standard information that your browser sends to every Web
+                                    site you visit, such as your Internet Protocol (IP) address, your browser type and capabilities and language, your operating
+                                    system, and the Web site from which you linked to our site. We do not link this information to your identity.
                                  </p>
                                  <p xmlns:o="urn:www.microsoft.com/office" xmlns:st1="urn:www.microsoft.com/smarttags" xmlns:w="urn:www.microsoft.com/word"><strong>Use of information</strong></p>
                                  <p xmlns:o="urn:www.microsoft.com/office" xmlns:st1="urn:www.microsoft.com/smarttags" xmlns:w="urn:www.microsoft.com/word"><em>Services and transactions.</em> We use your personal information to deliver services or carry out transactions you have requested, such as providing information
                                     on Rockwell Collins products, registering purchased products, processing product orders, handling warranty claims, providing
                                     product manuals, answering customer service requests, receiving Rockwell Collins purchase orders and managing supplier information,
-                                    facilitating use of our websites, and so forth. In order to offer you a more consistent experience in your interactions with
-                                    Rockwell Collins, information collected by our websites may be combined with information we collect by other means.
+                                    facilitating use of our Web sites, and so forth. In order to offer you a more consistent experience in your interactions with
+                                    Rockwell Collins, information collected by our Web sites may be combined with information we collect by other means.
                                  </p>
-                                 <p xmlns:o="urn:www.microsoft.com/office" xmlns:st1="urn:www.microsoft.com/smarttags" xmlns:w="urn:www.microsoft.com/word"><em>Website improvement.</em> We may use your personal information to improve our websites and related Rockwell Collins products and services, or to make
-                                    our websites easier to use by eliminating the need for you to repeatedly enter the same information or by customizing our
-                                    websites to your particular preferences or interests.
+                                 <p xmlns:o="urn:www.microsoft.com/office" xmlns:st1="urn:www.microsoft.com/smarttags" xmlns:w="urn:www.microsoft.com/word"><em>Web site improvement.</em> We may use your personal information to improve our Web sites and related Rockwell Collins products and services, or to make
+                                    our Web sites easier to use by eliminating the need for you to repeatedly enter the same information or by customizing our
+                                    Web sites to your particular preferences or interests.
                                  </p>
                                  <p xmlns:o="urn:www.microsoft.com/office" xmlns:st1="urn:www.microsoft.com/smarttags" xmlns:w="urn:www.microsoft.com/word"><em>Employment applications.</em> We ask you for personal information in connection with a job application or inquiry, such as information about yourself,
                                     a resume or curriculum vitae. We may use this information throughout Rockwell Collins and its controlled subsidiaries and
                                     affiliates for the purpose of employment consideration. We will keep the information for future consideration unless you direct
-                                    us not to do so. By accessing our websites, you are consenting to the information collection and use practices described in
-                                    this privacy statement.
+                                    us not to do so. By accessing our Web sites, you are consenting to the information collection and use practices described
+                                    in this privacy statement.
                                  </p>
-                                 <p xmlns:o="urn:www.microsoft.com/office" xmlns:st1="urn:www.microsoft.com/smarttags" xmlns:w="urn:www.microsoft.com/word"><em>Disclosure of your personal information.</em> Except as described below, personal information you provide to Rockwell Collins through our websites will not be shared outside
-                                    of Rockwell Collins and its controlled subsidiaries and affiliates without your permission.
+                                 <p xmlns:o="urn:www.microsoft.com/office" xmlns:st1="urn:www.microsoft.com/smarttags" xmlns:w="urn:www.microsoft.com/word"><em>Disclosure of your personal information.</em> Except as described below, personal information you provide to Rockwell Collins through our Web sites will not be shared
+                                    outside of Rockwell Collins and its controlled subsidiaries and affiliates without your permission.
                                  </p>
-                                 <p xmlns:o="urn:www.microsoft.com/office" xmlns:st1="urn:www.microsoft.com/smarttags" xmlns:w="urn:www.microsoft.com/word"><em>Disclosure to service providers.</em> Rockwell Collins contracts with other companies to provide services on our behalf, such as hosting websites, sending out
-                                    information, processing transactions, and analyzing our websites. We provide these companies with only those elements of your
-                                    personal information they need to deliver those services. These companies and their employees are prohibited from using that
-                                    personal information for any other purpose.
+                                 <p xmlns:o="urn:www.microsoft.com/office" xmlns:st1="urn:www.microsoft.com/smarttags" xmlns:w="urn:www.microsoft.com/word"><em>Disclosure to service providers.</em> Rockwell Collins contracts with other companies to provide services on our behalf, such as hosting Web sites, sending out
+                                    information, processing transactions, and analyzing our Web sites. We provide these companies with only those elements of
+                                    your personal information they need to deliver those services. These companies and their employees are prohibited from using
+                                    that personal information for any other purpose.
                                  </p>
                                  <p xmlns:o="urn:www.microsoft.com/office" xmlns:st1="urn:www.microsoft.com/smarttags" xmlns:w="urn:www.microsoft.com/word"><em>Disclosure to distributors.</em> In responding to a request made by you, we may share your personal information with companies that distribute our products
                                     or services. In those cases, we provide these companies with only those elements of your personal information they need to
@@ -283,19 +283,19 @@
                                     the same login mechanism, we verify your identity by means of an encrypted cookie placed on your machine.
                                  </p>
                                  <p xmlns:o="urn:www.microsoft.com/office" xmlns:st1="urn:www.microsoft.com/smarttags" xmlns:w="urn:www.microsoft.com/word"><strong>Reviewing your personal information</strong></p>
-                                 <p xmlns:o="urn:www.microsoft.com/office" xmlns:st1="urn:www.microsoft.com/smarttags" xmlns:w="urn:www.microsoft.com/word">In some cases, you can review and correct personal information provided through our websites by going to the page on which
+                                 <p xmlns:o="urn:www.microsoft.com/office" xmlns:st1="urn:www.microsoft.com/smarttags" xmlns:w="urn:www.microsoft.com/word">In some cases, you can review and correct personal information provided through our Web sites by going to the page on which
                                     you provided the information. In all cases, you can make a request to review and correct your personal information collected
-                                    via our websites or ask Rockwell Collins to stop using it by completing our "Contact Us" form. We may take steps to verify
+                                    via our Web sites or ask Rockwell Collins to stop using it by completing our "Contact Us" form. We may take steps to verify
                                     your identity before providing you access to your personal information. You can help us to maintain the accuracy of your information
                                     by notifying us of any change to your mailing address, phone number, or email address.
                                  </p>
                                  <p xmlns:o="urn:www.microsoft.com/office" xmlns:st1="urn:www.microsoft.com/smarttags" xmlns:w="urn:www.microsoft.com/word"><strong>International transfers of personal information</strong></p>
-                                 <p xmlns:o="urn:www.microsoft.com/office" xmlns:st1="urn:www.microsoft.com/smarttags" xmlns:w="urn:www.microsoft.com/word">Personal information collected on our websites may be stored and processed in the United States or any other country in which
-                                    Rockwell Collins or its affiliates, subsidiaries or agents maintain facilities. By using our websites, you consent to any
+                                 <p xmlns:o="urn:www.microsoft.com/office" xmlns:st1="urn:www.microsoft.com/smarttags" xmlns:w="urn:www.microsoft.com/word">Personal information collected on our Web sites may be stored and processed in the United States or any other country in which
+                                    Rockwell Collins or its affiliates, subsidiaries or agents maintain facilities. By using our Web sites, you consent to any
                                     such transfer of information outside of your country.
                                  </p>
                                  <p xmlns:o="urn:www.microsoft.com/office" xmlns:st1="urn:www.microsoft.com/smarttags" xmlns:w="urn:www.microsoft.com/word"><strong>Links to other sites</strong></p>
-                                 <p xmlns:o="urn:www.microsoft.com/office" xmlns:st1="urn:www.microsoft.com/smarttags" xmlns:w="urn:www.microsoft.com/word">Our websites may contain links to other sites such as professional and government organizations. We also link to third-party
+                                 <p xmlns:o="urn:www.microsoft.com/office" xmlns:st1="urn:www.microsoft.com/smarttags" xmlns:w="urn:www.microsoft.com/word">Our Web sites may contain links to other sites such as professional and government organizations. We also link to third-party
                                     providers that host, maintain and operate on-line training or services. While we try to link only to sites that share our
                                     high standards and respect for privacy, we are not responsible for the content, security, or privacy practices employed by
                                     other sites.
@@ -309,8 +309,7 @@
                                     and bottom of the privacy statement. We will obtain your opt-in consent for any updates to this privacy statement that materially
                                     expand the sharing or use of your personal information in ways not disclosed in this privacy statement at the time of collection.
                                  </p>
-                                 <p xmlns:o="urn:www.microsoft.com/office" xmlns:st1="urn:www.microsoft.com/smarttags" xmlns:w="urn:www.microsoft.com/word"><strong>Last Updated February 2008</strong>&nbsp;
-                                 </p>
+                                 <p xmlns:o="urn:www.microsoft.com/office" xmlns:st1="urn:www.microsoft.com/smarttags" xmlns:w="urn:www.microsoft.com/word"><strong>Last Updated September 2009</strong></p>
                               </td>
                               <td valign="top"><img width="5" src="/images/spacer.gif"></td>
                            </tr>
