seussville.com (archived on 2009-11-01)
{
  "alexa_rank": 158771,
  "analysis_subcorpus": false,
  "categories": "education;games",
  "char_count": 7909,
  "classifier_probability": 0.92,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.65,
  "homepage_snapshot_redirected_domain": "seussville.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20091001041636id_/http://www.seussville.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20091001041636id_/http%3A//seussville.com",
  "interval": "2009_B",
  "link_text": "Privacy Policy.",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "randomhouse.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20091101103726id_/http%3A//www.randomhouse.com/about/privacy.html",
  "policy_title": "Random House - Privacy Policy",
  "policy_url": "randomhouse.com/about/privacy.html",
  "sha1": "023913b676acb953b46da825daeed8c1f1095e85",
  "simhash": 18037896533818608311,
  "simhash_updated": false,
  "site_hostname": "seussville.com",
  "site_url": "http://seussville.com",
  "smog": 14.12,
  "strict_updated": false,
  "timestamp": "20091101103726",
  "word_count": 1372,
  "year": 2009
}

--- a/s/se/seu/seussville.com.html
+++ b/s/se/seu/seussville.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the seussville.com privacy policy that was archived on 2009-06-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090625220245id_/http%3A//www.randomhouse.com/about/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the seussville.com privacy policy that was archived on 2009-11-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091101103726id_/http%3A//www.randomhouse.com/about/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 		<script src="/art/bw06/rh.js" type="text/javascript"></script>
@@ -236,7 +236,7 @@
 						<li><a href="/rgg/">Reading Groups</a></li>
 						<script type="text/javascript" language="javascript">
 						document.write('<li><a class="rollover" onclick="feedbackOpen(); return false;" href="/cgi-bin/feedback/feedback.php?loc=' + window.location.href + '">Feedback<\/a><\/li>');
-						</script><li><a class="rollover" onclick="feedbackOpen(); return false;" href="/cgi-bin/feedback/feedback.php?loc=https://web.archive.org/web/20090625220245id_/http%3A//www.randomhouse.com/about/privacy.html">Feedback</a></li>
+						</script><li><a class="rollover" onclick="feedbackOpen(); return false;" href="/cgi-bin/feedback/feedback.php?loc=https://web.archive.org/web/20091101103726id_/http%3A//www.randomhouse.com/about/privacy.html">Feedback</a></li>
 						<li><a href="/about/sitemap.html">Sitemap</a></li>
 						<li><a href="/about/privacy.html">Privacy Policy</a></li>
 						<li><a href="/about/terms.html">Terms of Use</a></li>
@@ -252,6 +252,7 @@
 						<li><a href="http://www.randomhouse.biz/webservices/insight/">Insight Web Service</a></li>
 						<li><a href="http://www.randomhouse.biz/technology/">Technology Services</a></li>
 						<li><a href="http://www.randomhouse.biz/affiliates/">Affiliate Program</a></li>
+						<li><a href="http://www.rhspeakers.com/">Random House Speakers Bureau</a></li>
 					</ul>
 					
 					<ul>
