--- a/g/ge/geo/geosociety.org.html
+++ b/g/ge/geo/geosociety.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the geosociety.org privacy policy that was archived on 2009-06-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090620054916id_/http%3A//www.geosociety.org/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the geosociety.org privacy policy that was archived on 2009-11-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091101125814id_/http%3A//www.geosociety.org/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/resources.dwt" codeOutsideHTMLIsLocked="false" --><head>
 <!-- InstanceBeginEditable name="doctitle" -->
@@ -187,7 +187,7 @@
 </li>
 <li><a href="/profdev/">Opportunites</a>
  <ul>
-	<li><a href="/members/campus.htm">Campus Reps</a></li>
+	<li><a href="/members/campus.asp">Campus Reps</a></li>
 	<li><a href="/csf/index.htm">Congressional Science Fellowship</a></li>
 	<li><a href="/geocorps/index.htm">GeoCorps™ America&nbsp;&gt;</a>
   <ul>
