protectyourbubble.com (archived on 2009-11-01)
{
  "alexa_rank": 461927,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 7710,
  "classifier_probability": 0.91,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 10.01,
  "homepage_snapshot_redirected_domain": "protectyourbubble.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090922224724id_/http://www.protectyourbubble.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090922224724id_/http%3A//protectyourbubble.com",
  "interval": "2009_B",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "protectyourbubble.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20091101130557id_/http%3A//www.protectyourbubble.com/privacy.html",
  "policy_title": "Protectyourbubble Privacy Policy",
  "policy_url": "protectyourbubble.com/privacy.html",
  "sha1": "f7d739ee3948c7ccf4a663e4f996b6f1f7ce4f33",
  "simhash": 11688413727702424072,
  "simhash_updated": false,
  "site_hostname": "protectyourbubble.com",
  "site_url": "http://protectyourbubble.com",
  "smog": 13.92,
  "strict_updated": true,
  "timestamp": "20091101130557",
  "word_count": 1287,
  "year": 2009
}

--- a/p/pr/pro/protectyourbubble.com.html
+++ b/p/pr/pro/protectyourbubble.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the protectyourbubble.com privacy policy that was archived on 2009-06-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090619015004id_/http%3A//www.protectyourbubble.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the protectyourbubble.com privacy policy that was archived on 2009-11-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091101130557id_/http%3A//www.protectyourbubble.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -49,7 +49,11 @@
     </div>
     <ul class="NavMain">
     <li>
-      <a href="/" title="Protect your bubble, personal emergency and home emergency insurance cover.">Home</a>
+      <a href="/life-insurance/" title="Life Insurance">Life Insurance</a>
+      <span class="crnrNavMainTL">&nbsp;</span><span class="crnrNavMainTR">&nbsp;</span>
+    </li>
+    <li>
+      <a href="/travel-insurance/" title="Travel Insurance">Travel Insurance</a>
       <span class="crnrNavMainTL">&nbsp;</span><span class="crnrNavMainTR">&nbsp;</span>
     </li>
     <li>
@@ -57,7 +61,11 @@
       <span class="crnrNavMainTL">&nbsp;</span><span class="crnrNavMainTR">&nbsp;</span>
     </li>
     <li>
-      <a href="/personal-emergency/" title="Personal Emergency">Personal Emergency</a>
+      <a href="/home-insurance/" title="Home Insurance">Home Insurance</a>
+      <span class="crnrNavMainTL">&nbsp;</span><span class="crnrNavMainTR">&nbsp;</span>
+    </li>
+    <li>
+      <a href="/income-protection/" title="Income Protection">Income Protection</a>
       <span class="crnrNavMainTL">&nbsp;</span><span class="crnrNavMainTR">&nbsp;</span>
     </li>
     <li>
@@ -65,15 +73,7 @@
       <span class="crnrNavMainTL">&nbsp;</span><span class="crnrNavMainTR">&nbsp;</span>
     </li>
     <li>
-      <a href="/car-insurance/" title="Car Insurance ">Car Insurance</a>
-      <span class="crnrNavMainTL">&nbsp;</span><span class="crnrNavMainTR">&nbsp;</span>
-    </li>
-    <li>
-      <a href="/home-insurance/" title="Home Insurance">Home Insurance</a>
-      <span class="crnrNavMainTL">&nbsp;</span><span class="crnrNavMainTR">&nbsp;</span>
-    </li>
-    <li>
-      <a href="/travel-insurance/" title="Travel Insurance">Travel Insurance</a>
+      <a href="/personal-emergency/" title="Personal Emergency">Personal Emergency</a>
       <span class="crnrNavMainTL">&nbsp;</span><span class="crnrNavMainTR">&nbsp;</span>
     </li>
 </ul>
@@ -190,9 +190,9 @@ However, you can contact us at any time to have your details removed from lists 
 <br>
 The Marketing Department,<br>
 Protect your bubble,<br>
-117-119, Whitby Road,<br>
-Slough,<br>
-SL1 3DR. 
+Assurant House, 6-12 Victoria Street,<br>
+Windsor,<br>
+SL4 1EN. 
 </p>
 <p>
 <strong>Sensitive information</strong> <br>
@@ -253,17 +253,18 @@ If you would like a copy of the information we hold about you, please write to: 
 </li>
 </ul>
 </div>
-    <div class="Copy">Last modified: 18.06.2009</div>
+    <div class="Copy">Last modified: 30.10.2009</div>
     <div class="Clear"></div>
   </div>
 
 <br>
 <p style="padding:12px">
-<small>Protect your bubble is a trading name of Assurant Direct Limited, a company registered in England and Wales (registration company number 5399683).<br> <br>Assurant Direct Limited is an Appointed Representative of Assurant Intermediary Limited, a company registered in England and Wales (registration company number 4019801). Assurant Intermediary Limited is authorised and regulated by the Financial Services Authority (registered number 311243). You can check this on the FSA's register by visiting the FSA's website <a href="http://www.fsa.gov.uk/register" target="_blank">www.fsa.gov.uk/register</a> or by contacting the FSA on 0845 606 1234.<br><br> Assurant Direct Limited and Assurant Intermediary Limited are subsidiaries of Assurant Group Limited, a company registered in England and Wales (registration company number 3264846). VAT number 577650307.</small>
+<small>Protect your bubble is a trading name of Assurant Direct Limited, a company registered in England and Wales (registration company number 5399683).<br> <br>Assurant Direct Limited is an Appointed Representative of Assurant Intermediary Limited, a company registered in England and Wales (registration company number 4019801). Assurant Intermediary Limited is authorised and regulated by the Financial Services Authority (registered number 311243). You can check this on the FSA's register by visiting the FSA's website <a href="http://www.fsa.gov.uk/Pages/register/" target="_blank">www.fsa.gov.uk</a> or by contacting the FSA on 0845 606 1234.<br><br> Assurant Direct Limited and Assurant Intermediary Limited are subsidiaries of Assurant Group Limited, a company registered in England and Wales (registration company number 3264846). VAT number 577650307.</small>
 </p>
 
 </div>
-<div class="trackerCode"><script type="text/javascript">
+<div class="trackerCode">
+  <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 </script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
@@ -272,7 +273,7 @@ var pageTracker = _gat._getTracker("UA-5868719-1");
 pageTracker._trackPageview();
 </script>
 
-</div>
+  </div>
 <script type="text/javascript">if(typeof sIFR == "function"){sIFR();};</script>
 
 </body></html>
